# Cortan

./: .gitignore  CITATION.cff  CITATION.md  CMakeLists.txt  README.md  setup_structure.sh
FAQ/: Intro.md
FAQ/Architecture/: README.md  component-diagram.md  cross-reference-status.md  data-flow.md  index.md  performance-scaling.md  security-architecture.md
benchmarks/: ai_benchmarks.cpp  core_benchmarks.cpp  memory_benchmarks.cpp  model_benchmarks.cpp  network_benchmarks.cpp
cmake/: CMakeLists.txt  README.md  build.sh  conanfile.py
config/: orchestrator.json
docs/: EventBus.md  Networking.md
include/cortan/ai/: model_manager.hpp
include/cortan/core/: event_system.hpp  workflow_engine.hpp
include/cortan/network/: http_client.hpp
scripts/: build.sh
src/: main.cpp
src/ai/: context_manager.cpp  conversation_manager.cpp  input_validator.cpp  model_interface.cpp  model_manager.cpp  ollama_client.cpp  response_aggregator.cpp  security_manager.cpp  task_dispatcher.cpp  workflow_coordinator.cpp
src/core/: allocator.cpp  config.cpp  event_system.cpp  logger.cpp  memory_pool.cpp  resource_manager.cpp  thread_pool.cpp  workflow_engine.cpp
src/network/: connection_pool.cpp  http_client.cpp  request_handler.cpp  websocket_client.cpp
src/terminal/: command_processor.cpp  completion_engine.cpp  history_manager.cpp  interactive_shell.cpp  streaming_display.cpp
tests/core/: test_event_system.cpp
